//
// Created by jienn on 03/11/2025.
//

#ifndef PROYECTO_BIBLIOTECA_USUARIO_H
#define PROYECTO_BIBLIOTECA_USUARIO_H


class Usuario {
};


#endif //PROYECTO_BIBLIOTECA_USUARIO_H